--- a/frmScheduler00/frmScheduler00/frmScheduler00.csproj
+++ b/frmScheduler00/frmScheduler00/frmScheduler00.csproj
@@ -17,7 +17,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
+    <OutputPath>..\compiledFiles\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -55,20 +55,22 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BLL\Driver.cs" />
+    <Compile Include="BLL\DriverAvailability.cs" />
     <Compile Include="BLL\Vehicle.cs" />
+    <Compile Include="BLL\VehicleAvailability.cs" />
     <Compile Include="DAL\DriverDAL.cs" />
     <Compile Include="DAL\VehicleDAL.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="UI\FrmMain.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="UI\FrmMain.Designer.cs">
+      <DependentUpon>FrmMain.cs</DependentUpon>
     </Compile>
     <Compile Include="Helper\DBHelper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="UI\FrmMain.resx">
+      <DependentUpon>FrmMain.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -76,10 +78,16 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="UI\SetDriverAvailability.resx">
+      <DependentUpon>SetDriverAvailability.cs</DependentUpon>
+    </EmbeddedResource>
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="Properties\DataSources\frmScheduler00.BLL.Driver.datasource" />
+    <None Include="Properties\DataSources\frmScheduler00.BLL.DriverAvailability.datasource" />
+    <None Include="Properties\DataSources\frmScheduler00.BLL.Vehicle.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -88,6 +96,12 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
+    </Compile>
+    <Compile Include="UI\SetDriverAvailability.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\SetDriverAvailability.Designer.cs">
+      <DependentUpon>SetDriverAvailability.cs</DependentUpon>
     </Compile>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
