--- a/myAddressCtl/myAddressCtl/myAddressCtl.csproj
+++ b/myAddressCtl/myAddressCtl/myAddressCtl.csproj
@@ -16,7 +16,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
+    <OutputPath>..\CompiledCode\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -24,15 +24,21 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
+    <OutputPath>..\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
-    <Reference Include="FMSystem, Version=72.1.1004.2301, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="FMSystem">
+      <HintPath>..\..\..\..\..\..\..\FreightMaster80\Standard\Transport85_VS2013\release\FMSystem.dll</HintPath>
+    </Reference>
+    <Reference Include="myAddressCtl, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>bin\Debug\FMSystem.dll</HintPath>
+      <HintPath>obj\Release\myAddressCtl.exe</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
